# Vanta

./: .gitignore  CMakeLists.txt  README.md
cmake/: MornoxOptions.cmake  VantaOptions.cmake
docs/: coding-style.md
docs/architecture/: abi.md  agent-native-platform.md  data-boundaries.md  mission-workbench-ui.md  services.md  settings.md
include/mornox/platform/: executable.h  process.h
include/vanta/agent/: agent_context.h  agent_operation.h  agent_runtime.h  agent_tool_registry.h  model_service.h
include/vanta/core/: cancellation.h  diagnostic.h  localization.h  registration.h  text.h
include/vanta/debug/: debug_service.h
include/vanta/execution/: build_service.h  execution_protocol.h  execution_service.h  job_service.h  problem_matcher.h  run_configuration.h
include/vanta/ide/: ide_application.h  ui_service.h
include/vanta/language/: code_intelligence_service.h  code_model.h  document_language_sync.h  language_request_pipeline.h  language_service.h  lsp_client.h  lsp_language_service.h  refactoring_service.h
include/vanta/platform/: async.h  async_job_dispatcher.h  json.h  process.h  result.h
include/vanta/plugin/: approval_service.h  contribution_registry.h  core_plugin.h  extension_context.h  permissions.h  plugin_manager.h  plugin_process_host.h  plugin_protocol.h  plugin_storage.h
include/vanta/project/: component.h  project.h  project_manager.h  project_state_store.h  project_template.h
include/vanta/vfs/: file_watcher.h  uri.h  virtual_file.h  virtual_file_system.h
include/vanta/workspace/: access_control.h  approval_service.h  capability_service.h  change_set_service.h  command_palette.h  command_registry.h  diagnostic_service.h  document_service.h  editor.h  git_service.h  ide_application.h  ide_environment.h  ide_event.h  index_service.h  initialization.h  layout_state_store.h  search_service.h  settings_service.h  ui_state_store.h  workspace.h  workspace_context.h  workspace_edit.h  workspace_runtime.h  workspace_services.h  workspace_trust.h
plugins/builtin/src/: core_plugin_factories.h  core_plugins.cpp
plugins/builtin/vanta.clice/: vanta.plugin.json
plugins/builtin/vanta.cmake/: vanta.plugin.json
plugins/builtin/vanta.cpp/: vanta.plugin.json
plugins/builtin/vanta.git/: vanta.plugin.json
plugins/builtin/vanta.languages/: vanta.plugin.json
plugins/builtin/vanta.python/: vanta.plugin.json
plugins/clice/: vanta.plugin.json
plugins/cmake/: vanta.plugin.json
plugins/git/: vanta.plugin.json
plugins/languages/: vanta.plugin.json
src/agent/: agent_context.cpp  agent_operation.cpp  agent_tool_registry.cpp
src/app/: main.cpp
src/builtin/clice/: clice_integration.cpp
src/builtin/cmake/: cmake_build_provider.cpp  cmake_project_model.cpp
src/builtin/cpp/: cpp_index.cpp
src/builtin/git/: git_client.cpp
src/cli/: main.cpp
src/core/: cancellation.cpp  registration.cpp  text.cpp
src/core/agent/: agent_context.cpp  agent_operation.cpp  agent_runtime.cpp  agent_tool_registry.cpp  model_service.cpp
src/core/debug/: debug_service.cpp
src/core/execution/: build_service.cpp  build_service_impl.h  execution_protocol.cpp  execution_service.cpp  job_service.cpp  problem_matcher.cpp  run_configuration.cpp  run_configuration_service_impl.h
src/core/internal/: projection.cpp  projection.h
src/core/language/: code_intelligence_service.cpp  code_model.cpp  document_language_sync.cpp  language_registry_impl.h  language_request_pipeline.cpp  language_request_pipeline.h  language_service.cpp  lsp_client.cpp  lsp_language_service.cpp  refactoring_service.cpp
src/core/platform/: async.cpp  async_job_dispatcher.cpp  executable.cpp  process.cpp  process_posix.cpp  process_win32.cpp
src/core/plugin/: plugin_manager.cpp  plugin_process_command.cpp  plugin_process_command.h  plugin_process_host.cpp  plugin_protocol.cpp  plugin_storage.cpp
src/core/project/: component.cpp  project.cpp  project_manager.cpp  project_state_store.cpp  project_state_store.h  project_template.cpp
src/core/vfs/: file_watcher.cpp  uri.cpp  virtual_file.cpp  virtual_file_system.cpp
src/core/workspace/: access_control.cpp  approval_service.cpp  capability_service.cpp  change_set_service.cpp  command_registry.cpp  command_registry_impl.h  diagnostic_service.cpp  document_service.cpp  git_service.cpp  git_service_impl.h  ide_event.cpp  index_service.cpp  settings_service.cpp  workspace.cpp  workspace_context.cpp  workspace_runtime.cpp  workspace_trust.cpp
src/execution/: build_service.cpp  execution_protocol.cpp  execution_service.cpp  job_service.cpp  problem_matcher.cpp  run_configuration.cpp
src/ide/: icons.cpp  icons.h  icons.qrc  ide_application.cpp  main.cpp  main_window.cpp  main_window.h  theme.cpp  theme.h  ui_service.cpp  ui_service_impl.h  workspace_controller.cpp  workspace_controller.h
src/ide/ui/: command_palette.cpp  editor.cpp  (+6 more)
src/language/: code_intelligence_service.cpp  document_language_sync.cpp  language_request_pipeline.cpp  language_service.cpp  lsp_client.cpp  lsp_language_service.cpp
src/platform/: async.cpp  json.cpp  process_posix.cpp
src/plugin/: approval_service.cpp  contribution_registry.cpp  core_plugins.cpp  extension_context.cpp  permissions.cpp  plugin_manager.cpp  plugin_process_host.cpp  plugin_protocol.cpp
src/project/: component.cpp  project.cpp  project_manager.cpp  project_state_store.cpp  project_template.cpp
src/vfs/: file_watcher.cpp  uri.cpp  virtual_file.cpp  virtual_file_system.cpp
src/workspace/: capability_service.cpp  change_set_service.cpp  command_palette.cpp  diagnostic_service.cpp  document_service.cpp  editor.cpp  ide_application.cpp  ide_event.cpp  index_service.cpp  initialization.cpp  layout_state_store.cpp  search_service.cpp  settings_service.cpp  ui_state_store.cpp  workspace.cpp  workspace_context.cpp  workspace_runtime.cpp  workspace_services.cpp
tests/: agent_tests.cpp  debug_tests.cpp  execution_tests.cpp  index_tests.cpp  language_tests.cpp  plugin_tests.cpp  project_tests.cpp  refactoring_tests.cpp  settings_tests.cpp  test_support.h  vanta_tests.cpp  workspace_tests.cpp
(+29 files in other folders)
